--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
